resources/main.css
body {
	margin: 0 0 0 0;
	padding: 0 0 0 0;
	font-size: x-small;

	font-family: sans-serif;
	color: #000;
	background-color: #f0f0f0;

	direction: ltr;
	unicode-bidi: embed;
}

#mw_main,
#p-personal,
#mw_header,
.os-suggest {
	font-size: 130%;
}

#mw_header {
	position: absolute;
	top: 0;
	left: 0;
	margin: 0 0 0 0;
	padding: 0 0 0 0;
	border: 0;
	height: 2em;
	width: 100%;
	background-color: #036;
	color: #fff;
}

.mw-indicators {
	float: right;
}

.mw-indicator {
	display: -moz-inline-block;
	display: inline-block;
	zoom: 1;
	*display: inline; /* stylelint-disable-line declaration-block-no-duplicate-properties */
}

#mw_header h1 {
	margin: 0 0 0 0.5em;
	padding: 0 0 0 0;
	text-decoration: none;
	font-size: 150%;
}

#p-personal {
	position: absolute;
	top: 2em;
	left: 0;
	height: 1.5em;
	margin: 0 0 0 0;
	padding: 0 0 0 0;
	width: 100%;
}

#p-personal div.pBody {
	margin: 0 0 0 0;
	padding: 0 0 0 0;
	height: 1.5em;
	font-variant: small-caps;
}

#p-personal h3 {
	display: none;
}

#p-personal ul {
	margin: 0 0 0 0;
	padding: 0 0 0 0;
	display: block;
	height: 1.5em;
	background-color: #3c78b5;
}

#p-personal li {
	display: block;
	float: left;
	height: 1.5em;
	margin: 0 0 0 0;
	vertical-align: middle;

	font-weight: bold;
	text-transform: lowercase;
}

#p-personal li a {
	text-decoration: none;
	color: #fff;
	padding: 0 1em 0 1em;
}

#p-personal li a:hover {
	text-decoration: none;
	color: #fff;
}

#p-personal li:hover {
	background-color: #036;
}

#jump-to-nav {
	display: none;
}

#mw_contentwrapper {
	width: 100%;
	margin: 0 0 0 -15em;
	float: right;
}

#mw_content {
	margin: 0 0 0 14em;

	background-color: #fff;
	border-top: solid 1px #bbb;
	border-left: solid 1px #bbb;
	border-bottom: solid 1px #bbb;

	line-height: 1.5em;
	padding: 0 1em 1em 1em;
}

#mw_portlets {
	width: 14em;

	border-right: solid 1px #bbb;
	background-color: #f0f0f0;
}

/* Hide, but keep accessible for screen-readers */
#mw_portlets h2 {
	position: absolute;
	top: -9999px;
}

#mw_main {
	padding: 0 0 0 0;
	margin: 0 0 0 0;
	margin-top: 3.5em;
}

div.mw_clear {
	margin: 0 0 0 0;
	padding: 0 0 0 0;
	clear: both;
}

.portlet {
	padding: 0 0 0 0;
	margin: 0 0 0 0;
}

.portlet div.pBody {
	padding: 0 0 0.5em 0;
}

textarea {
	width: 100%;
	padding: 0.1em;
	display: block;
	-moz-box-sizing: border-box;
	-webkit-box-sizing: border-box;
	box-sizing: border-box;
}

#searchBody {
	text-align: center;
}

#searchInput {
	width: 85%;
	margin-left: auto;
	margin-right: auto;
}

#p-search #searchform div div {
	margin-top: 0.4em;
}

.portlet h3 {
	padding: 0.1em 0 0.3em 1em;
	margin: 0 0 0 0;
	background-color: #ddd;
	font-weight: bold;
	font-size: 0.83em;
	border-bottom: solid 1px #3c78b5;
	height: 1.1em;
}

.portlet ul {
	margin: 0 0 0 1.5em;
	padding: 0 0 0 0;
}

#mw_portlets .portlet ul {
	line-height: 1.4em;
}

ul {
	/* @embed */
	list-style-image: url( images/bullet.gif );
}

#p-cactions {
	height: 1.5em;
	padding: 0 0 0 0;
	margin: 0 0 0 14em;
}

#p-cactions div.pBody {
	margin: 0 0 0 0;
	padding: 0 0 0 0;
}

#p-cactions a,
#p-cactions a:hover {
	color: #000;
	text-decoration: none;
}

#p-cactions ul {
	display: inline;
	margin: 0 0 0 0;
	padding: 0 0 0 0;
}

#p-cactions li {
	margin: 0 0.5em 0 0.5em;
	padding: 0 0.2em 0 0.2em;
	display: block;
	float: left;
	height: 1.5em;
	text-transform: lowercase;
}

#p-cactions li.selected {
	background-color: #bbb;
}

#p-cactions li a,
#p-cactions li a:hover,
#p-cactions li a:visited {
	text-decoration: underline;
	color: #036;
}

#p-cactions li.selected a,
#p-cactions li.selected a:hover,
#p-cactions li.selected a:visited {
	text-decoration: none;
	color: #fff;
}

#p-cactions h3 {
	display: none;
}

#siteSub {
	display: none;
}

#footer {
	/* @embed */
	background: #f0f0f0 url( images/footer-grad.png ) repeat-x 0 0;
	padding: 10px 1em 1em 1em;
	clear: both;
	color: #444;
}

#footer a,
#footer a:hover,
#footer a:visited {
	color: #444;
	text-decoration: underline;
}

img {
	border: 0;
}

#footer li {
	display: inline;
	list-style-type: none;
	padding: 0 0 0 0;
	margin: 0 0 0 0;
}

#footer ul {
	padding: 0 0 0 0;
	margin: 0 0 0 0;
}

p {
	margin: 1em 0 1em 0;
}

hr {
	height: 1px;
	color: #aaa;
	background-color: #aaa;
	border: 0;
	margin: 0.2em 0 0.2em 0;
}

#contentSub {
	color: #545454;
	font-size: small;
	padding-left: 2em;
}

#mw_portlets form {
	margin: 0 0 0 0;
	padding: 0 0 0 0;
}

a {
	text-decoration: none;
	color: #036;
	background: none;
}

a:visited {
	color: #5a3696;
}

a:active {
	color: #faa700;
}

a:hover {
	text-decoration: underline;
}

a.stub {
	color: #723;
}

a.new {
	color: #ba0000;
}

a.new:visited {
	color: #a55858;
}

a.mw-selflink {
	color: inherit;
	font-weight: bold;
	text-decoration: inherit;
}

h1,
h2 {
	border-bottom: solid 1px #036;
}

h1,
h2,
h3,
h4,
h5,
h6 {
	overflow: hidden;
}

#mw_content a.external {
	/* @embed */
	background: url( images/external.png ) center right no-repeat;
	padding-right: 13px;
}

#mw_content a.external[href^='https://'],
.link-https {
	/* @embed */
	background: url( images/lock_icon.gif ) center right no-repeat;
	padding-right: 16px;
}

#mw_content a.external[href^='mailto:'],
.link-mailto {
	/* @embed */
	background: url( images/mail_icon.gif ) center right no-repeat;
	padding-right: 18px;
}

#mw_content a.external[href^='news:'] {
	/* @embed */
	background: url( images/news_icon.png ) center right no-repeat;
	padding-right: 18px;
}

#mw_content a.external[href^='ftp://'],
.link-ftp {
	/* @embed */
	background: url( images/file_icon.gif ) center right no-repeat;
	padding-right: 18px;
}

#mw_content a.external[href^='irc://'],
#mw_content a.external[href^='ircs://'],
.link-irc {
	/* @embed */
	background: url( images/discussionitem_icon.gif ) center right no-repeat;
	padding-right: 18px;
}
/* ... */

